--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,4 @@ test:
     - export CHROME_BIN=/usr/bin/google-chrome --no-sandbox
   script :
     - npm ci
-    - npm run test -- --watch=false --browsers=ChromeHeadless --no-sandbox
+    - npm run test -- --watch=false --browsers=ChromeHeadless
