--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers=Headless --no-watch"
+    "test": "ng test --browsers=ChromeHeadless --no-watch"
   },
   "private": true,
   "dependencies": {
