--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "medHead",
+  "name": "medhead",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers=ChromeHeadless --no-watch"
+    "test": "ng test",
+    "testci": "ng test --browsers=ChromeHeadless --no-watch"
   },
   "private": true,
   "dependencies": {
