--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
     - apt-get update
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - apt install -y ./google-chrome*.deb
-    - export CHROME_BIN=/usr/bin/google-chrome
+    - export CHROME_BIN=/usr/bin/google-chrome 
   script :
     - npm ci
-    - npm run test
+    - npm run test --headless ChromeHeadlessNoSandbox
