--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,4 @@ test:
     - export CHROME_BIN=/usr/bin/google-chrome 
   script :
     - npm ci
-    - npm run test --headless ChromeHeadlessNoSandbox
+    - npm run test
